--- a/public/quickstart/index.html
+++ b/public/quickstart/index.html
@@ -90,9 +90,8 @@
 <!-- raw HTML omitted -->
 <h2 id="die-regeln-in-kurzform-für-eilige">Die Regeln in Kurzform für eilige:</h2>
 <p><em>Leg die Karten so aus:</em></p>
-<pre><code><img class="image" src="images/Spielfeld.png" loading="lazy" alt="Example image.">
+<img class="image" src="/KackenAufWacken/images/Spielfeld.png" loading="lazy" alt="Example image.">
 
-</code></pre>
 <p>Hier kommt noch <strong>mehr</strong> Text</p>
 
 
