--- a/public/introduction/index.html
+++ b/public/introduction/index.html
@@ -76,6 +76,7 @@
 <nav class="main-menu layout__navigation" aria-label="Main menu">
 <ul class="navbar">
 <li><a href="/KackenAufWacken/"><span>Startseite</span></a></li>
+<li><a href="/KackenAufWacken/zubehoer"><span>Zubehör</span></a></li>
 <li><a href="/KackenAufWacken/quickstart"><span>Quickstart</span></a></li>
 <li><a href="/KackenAufWacken/introduction"><span>Einführung</span></a></li>
 <li><a href="/KackenAufWacken/tutorials"><span>Tutorials&#43;FAQs</span></a></li>
