--- a/public/zubehoer/index.html
+++ b/public/zubehoer/index.html
@@ -76,11 +76,13 @@
 <nav class="main-menu layout__navigation" aria-label="Main menu">
 <ul class="navbar">
 
-<li><a href="/Kacken-auf-Wacken/"><span>Startseite</span></a></li>
+<li><a href="/Kacken-auf-Wacken/story"><span>Story</span></a></li>
 <li><a href="/Kacken-auf-Wacken/zubehoer"><span>Zubehör</span></a></li>
+<li><a href="/Kacken-auf-Wacken/vorbereitung"><span>Vorbereitung</span></a></li>
 <li><a href="/Kacken-auf-Wacken/quickstart"><span>Quickstart</span></a></li>
-<li><a href="/Kacken-auf-Wacken/introduction"><span>Einführung</span></a></li>
-<li><a href="/Kacken-auf-Wacken/tutorials"><span>Tutorials&#43;FAQs</span></a></li>
+<li><a href="/Kacken-auf-Wacken/rules"><span>Spielregeln</span></a></li>
+<li><a href="/Kacken-auf-Wacken/faq"><span>FAQs</span></a></li>
+<li><a href="/Kacken-auf-Wacken/"><span>Startseite</span></a></li>
 
 </ul>
 
