--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
    
       
 	  <h3>
-        <a href="/Kacken-auf-Wacken/quickstart">Quickstart</a>
+        <a href="/Kacken-auf-Wacken/quickstart">Kurzanleitung</a>
 	</h3>
         
 		<h4>
