--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -24,7 +24,7 @@ Wie du die Bühnen und den Backstage-Bereich auslegst, wird hier beschrieben Zum
 
 
 
-  <link rel="stylesheet" href="/Kacken-auf-Wacken/main.min.244183cde1a38e0b08f82c11791181288f9aac1cc9618cd6f4e9e7710c5768ba.css" integrity="sha256-JEGDzeGjjgsI&#43;CwReRGBKI&#43;arBzJYYzW9OnncQxXaLo=" crossorigin="anonymous">
+  <link rel="stylesheet" href="/Kacken-auf-Wacken/main.min.0c9c735d645bb58d4cec432818bebea285034817535fe9df635c6bc42fc5f88f.css" integrity="sha256-DJxzXWRbtY1M7EMoGL6&#43;ooUDSBdTX&#43;nfY1xrxC/F&#43;I8=" crossorigin="anonymous">
 
 
 
@@ -83,32 +83,32 @@ Wie du die Bühnen und den Backstage-Bereich auslegst, wird hier beschrieben Zum
         <a href="/Kacken-auf-Wacken" style="text-decoration: none;">
     <div class="logo">
         
-            <img src="images/logo.png" alt="Your example logo alt text" />
+            <img src="images/logo.png" alt="Kacjen auf Wacken"  width="800" height="100"/>
         
     </div>
 </a>
 
 	</div>
-    <span class="header__inner">
-        <span class="header__right">
+    <div class="header__inner">
+        <div class="header__right">
                 <nav class="menu">
     <ul class="menu__inner"><li><a href="/Kacken-auf-Wacken/faq">FAQs</a></li><li><a href="/Kacken-auf-Wacken/">Startseite</a></li><li><a href="/Kacken-auf-Wacken/quickstart">Kurzanleitung</a></li><li><a href="/Kacken-auf-Wacken/rules">Spielregeln</a></li><li><a href="/Kacken-auf-Wacken/story">Story</a></li><li><a href="/Kacken-auf-Wacken/vorbereitung">Vorbereitung</a></li><li><a href="/Kacken-auf-Wacken/zubehoer">Zubehör</a></li>
     </ul>
 </nav>
 
-                <span class="menu-trigger">
+                <div class="menu-trigger">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M0 0h24v24H0z" fill="none"/>
                         <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
                     </svg>
-                </span>
+                </div>
                 <span class="theme-toggle not-selectable"><svg class="theme-toggler" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
    <path d="M22 41C32.4934 41 41 32.4934 41 22C41 11.5066 32.4934 3 22
    3C11.5066 3 3 11.5066 3 22C3 32.4934 11.5066 41 22 41ZM7 22C7
    13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22Z"/>
  </svg></span>
-        </span>
-    </span>
+        </div>
+    </div>
 </header>
 
 
@@ -134,7 +134,7 @@ Wie du die Bühnen und den Backstage-Bereich auslegst, wird hier beschrieben Zum
 <h3 id="you-can-add-a-header">You can add a header</h3>
 <p>You can add text within a collapsed section.
 You can add an image or a code block, too.</p>
-<p><img alt="&ldquo;ffdd&rdquo;" src="/../static/images/Spielfeld.png"></p>
+<p><img alt="&ldquo;ffdd&rdquo;" src="/images/Spielfeld.png"></p>
 <ul>
 <li>Wie du die Bühnen und den Backstage-Bereich auslegst, wird <a href="../tutorials/#buehne">hier</a> beschrieben</li>
 <li>Zum Seitenanfang kommst du <a href="/Kacken-auf-Wacken/faq/#leg-die-karten-so-aus">hier</a></li>
