--- a/public/de/404.html
+++ b/public/de/404.html
@@ -56,6 +56,7 @@
 
 
 
+ter
 
 
 
@@ -73,7 +74,7 @@
         <a href="/Kacken-auf-Wacken/de" style="text-decoration: none;">
     <div class="logo">
         
-            <img src="images/logo.png" alt="Kacjen auf Wacken"  width="800" height="100"/>
+            <img src="http://localhost:1313/Kacken-auf-Wacken//images/logo.png" alt="Kacjen auf Wacken"  width="800"/>
         
     </div>
 </a>
