--- a/public/de/index.html
+++ b/public/de/index.html
@@ -58,6 +58,7 @@
 
 
 
+ter
 
 
 
@@ -75,7 +76,7 @@
         <a href="/Kacken-auf-Wacken/de" style="text-decoration: none;">
     <div class="logo">
         
-            <img src="images/logo.png" alt="Kacjen auf Wacken"  width="800" height="100"/>
+            <img src="http://localhost:1313/Kacken-auf-Wacken//images/logo.png" alt="Kacjen auf Wacken"  width="800"/>
         
     </div>
 </a>
