--- a/public/index.html
+++ b/public/index.html
@@ -122,29 +122,29 @@ ter
 
 <div class="markdown-content">
         <h1 id="span-styletext-align-center"><span style="text-align: center;"></h1>
-<h1 id="kacken-auf-wacken">Kacken Auf Wacken</h1>
+<h1 id="kacken-auf-wacken"><strong>Kacken Auf Wacken</strong></h1>
 <h2 id="das-ultimative-kartenspiel-für-metalheads">Das ultimative Kartenspiel für Metalheads</h2>
 <details>
   <summary><span style="font-size: 2em;">Worum geht’s?</span></summary>
 <hr>
-<p>Ihr seid auf dem Wacken Open Air und wollt zu euren Lieblingsbands abrocken. Auf den drei Bühnen „Harder“, „Louder“ und „Faster“ spielen unterschiedliche Bands gleichzeitig, die Entscheidung fällt also nicht immer leicht. Worauf habt ihr gerade Bock? Geht ihr zusammen oder alleine? Habt ihr genug Bier? Und was passiert, wenn ihr gerade jetzt kacken müsst?
+<p>Ihr seid auf dem <strong>Wacken Open Air</strong> und wollt zu euren Lieblingsbands abrocken. Auf den drei Bühnen <strong>„Harder“</strong>, <strong>„Louder“</strong> und <strong>„Faster“</strong> spielen unterschiedliche Bands gleichzeitig, die Entscheidung fällt also nicht immer leicht. Worauf habt ihr gerade Bock? Geht ihr zusammen oder alleine? Habt ihr genug Bier? Und was passiert, wenn ihr gerade jetzt kacken müsst?
 Je mehr Songs ihr live seht, desto besser.
 Wenn ihr andere Metalheads mitnehmt, noch besser.
-Und: Es kann nie schaden, ein oder zwei Bier mitzunehmen.</p>
+Und: Es kann nie schaden, ein oder zwei <strong>Bier</strong> mitzunehmen.</p>
 <hr>
 </details>
 <details>
   <summary><span style="font-size: 2em;">Zubehör</span></summary>
 <hr>
-<p><em>24 „On Stage“-Karten</em><br>
+<p><em><strong>24 „On Stage“-Karten</strong></em><br>
 Das sind die Songs, die gerade performt werden.</p>
-<p><em>53 „Rock!“-Karten</em><br>
+<p><em><strong>53 „Rock!“-Karten</strong></em><br>
 Das sind die Bands, die ihr gerade gerne live sehen würdet, mit euren Lieblingssongs</p>
-<p><em>14 „Bierstand“-Karten</em><br>
+<p><em><strong>14 „Bierstand“-Karten</strong></em><br>
 Hier gibt’s Bier. Wenn man Glück hat.</p>
-<p><em>10 „WC“-Karten</em><br>
+<p><em><strong>10 „WC“-Karten</strong></em><br>
 Fast die einzige Möglichkeit, euer Geschäft zu erledigen.</p>
-<p><em>6 Karten mit Wacken-Bändchen</em><br>
+<p><em><strong>6 Karten mit Wacken-Bändchen</strong></em><br>
 Wie im richtigen Leben: Wer am Ende die meisten hat, gewinnt.
 Zerschneidet diese Karten und verwendet die Wacken-Bändchen als Siegpunkte.</p>
 <hr>
