--- a/public/de/404.html
+++ b/public/de/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
+    <head><script src="/Kacken-auf-Wacken/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=Kacken-auf-Wacken/livereload" data-no-instant defer></script>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -10,7 +10,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="https://brettimkopf.github.io/Kacken-auf-Wacken/de/404.html" />
+<link rel="canonical" href="http://localhost:1313/Kacken-auf-Wacken/de/404.html" />
 
 
     <title>
@@ -56,7 +56,6 @@
 
 
 
-ter
 
 
 
@@ -72,7 +71,7 @@ ter
         <a href="/Kacken-auf-Wacken/de" style="text-decoration: none;">
     <div class="logo">
         
-            <img src="https://brettimkopf.github.io/Kacken-auf-Wacken//images/logo.png" alt="Kacken auf Wacken"  width="800"/>
+            <img src="http://localhost:1313/Kacken-auf-Wacken//images/logo.png" alt="Kacken auf Wacken"  width="800"/>
         
     </div>
 </a>
@@ -111,9 +110,9 @@ ter
             <h1>404</h1>
             <p>Oops, Seite nicht gefunden ...</p>
             <p class="btn-404">
-                <a href="https://brettimkopf.github.io/Kacken-auf-Wacken/">
+                <a href="http://localhost:1313/Kacken-auf-Wacken/">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-                <a href="https://brettimkopf.github.io/Kacken-auf-Wacken/de/posts">
+                <a href="http://localhost:1313/Kacken-auf-Wacken/de/posts">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archiv</a>
             </p>
         </div>
